--- a/sources/VeloCity.Tests.Unit/VeloCity.Tests.Unit.csproj
+++ b/sources/VeloCity.Tests.Unit/VeloCity.Tests.Unit.csproj
@@ -43,6 +43,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\VeloCity.DataAccess.JsonFiles\VeloCity.DataAccess.JsonFiles.csproj" PrivateAssets="All" />
         <ProjectReference Include="..\VeloCity.Domain.DatabaseEditing\VeloCity.Domain.DatabaseEditing.csproj" PrivateAssets="All" />
         <ProjectReference Include="..\VeloCity.Ports.DataAccess\VeloCity.Ports.DataAccess.csproj" PrivateAssets="All" />
         <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
