update copyright year in some files.

--- a/sources/Directory.build.props
+++ b/sources/Directory.build.props
@@ -22,7 +22,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Version>1.17.0.0</Version>
         <Product>VeloCity</Product>
         <Company>Dust in the Wind</Company>
-        <Copyright>Copyright © Dust in the Wind 2022</Copyright>
+        <Copyright>Copyright © Dust in the Wind 2022-2023</Copyright>
         <Authors />
     </PropertyGroup>
 
