#178 - displayed the sprint members as icons

--- a/sources/VeloCity.Wpf.Presentation.CustomControls/VeloCity.Wpf.Presentation.CustomControls.csproj
+++ b/sources/VeloCity.Wpf.Presentation.CustomControls/VeloCity.Wpf.Presentation.CustomControls.csproj
@@ -28,6 +28,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <ItemGroup>
         <ProjectReference Include="..\VeloCity.ChartTools\VeloCity.ChartTools.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
     </ItemGroup>
 
 </Project>
