--- a/sources/VeloCity.Wpf.Presentation.Styles/VeloCity.Wpf.Presentation.Styles.csproj
+++ b/sources/VeloCity.Wpf.Presentation.Styles/VeloCity.Wpf.Presentation.Styles.csproj
@@ -27,6 +27,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\VeloCity.ChartTools\VeloCity.ChartTools.csproj" />
         <ProjectReference Include="..\VeloCity.Wpf.Presentation.CustomControls\VeloCity.Wpf.Presentation.CustomControls.csproj" PrivateAssets="All" />
     </ItemGroup>
 
